# prompt

./: .coveragerc  README.md  daring_fireball.py  ebay.ipynb  ebay.py  ebay_scraper.py  firstresults.csv  flight_club_scraper.ipynb  flight_club_scraper.py  footlocker_scraper.py  helpdoc.py  jarvis.py  newegg_scraper.py  prompty.py  prompty2.py  pyproject.toml  requirements.md  scraper_template.ipynb  welcome.py  wopr.py
prompt/: ebay_scraper.py  flight_club_scraper.py  footlocker_scraper.py  helpdoc.py  newegg_scraper.py  prompt.py  welcome.py
tests/: test_flight_club_scraper.py  test_newegg_scrapper.py  test_prompt.py
