[tool.poetry]
name = "prompt"
version = "0.1.0"
description = ""
authors = ["Daniel Dills <dills253@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
chromedriver = "^2.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
