[tool.poetry]
name = "prompt"
version = "0.1.0"
description = ""
authors = ["Daniel Dills <dills253@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
chromedriver = "^2.24.1"
selenium = "^3.141.0"
pandas = "^1.3.1"
pyfiglet = "^0.8.post1"
requests = "^2.26.0"
click = "^8.0.1"
numpy = "^1.21.1"
colorama = "^0.4.4"
clint = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
